src/App.css
body {
  background-color: lightgray;
  font-family: "Zilla Slab", serif;
}
a {
  text-decoration: none;
  color: black;
}
a:hover {
  text-decoration: underline;
}

.flex-container-col {
  display: flex;
  flex-direction: column;
}
.flex-container {
  display: flex;
  flex-direction: row;
}
.center {
  justify-content: center;
}
.margin-5pc {
  margin: 5%;
}
.padding-v {
  padding-bottom: 1rem;
}
.font-l {
  font-size: 5vw;
}
@media screen and (min-width: 1200px) {
  .font-l {
    font-size: 2.5rem;
  }
}
.typing {
  overflow: hidden;
  /* white-space: nowrap;  */
  animation: typing 3.5s steps(40, end);
}
/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}
.references {
  height: 2rem;
  width: 2rem;
  border-radius: 1rem;
  color: gray;
  overflow: visible;
  white-space: nowrap;
  transition: width 1s;
  box-sizing: border-box;
  padding: 0.3rem 0.7rem;
}
.references:hover {
  cursor: pointer;
  background-color: black;
  width: 8rem;
}

